# CHANGELOG

## v1.1

* Fixed bug caused by improper naming of `get_instruction_text`
* Added Waveform memory registers
* Tested on latest version of Binary Ninja
* Improved RST handling
* Correctly handle HMEM loads

## v1.0

* First version
* Added proper IO register symbols
* Added ISR symbols
* Fixed some incorrect branching
* Fixed some incorrect addressing modes

## Unreleased

* Nothing