@@ -1,5 +1,6 @@
 Copyright (c) 2020 Hugo Porcher
 Copyright (c) 2021 Carl Svensson <calle.svensson@zeta-two.com>
+Copyright (c) 2024 Sam Russell <sam.h.russell@gmail.com>
 
 Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
 
